# amo-lean

./: .gitignore  AmoLean.lean  FAQ.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  Use_Cases.md  lake-manifest.json  lakefile.lean
.github/workflows/: ci.yml
AmoLean/: Backends.lean  Basic.lean  CodeGen.lean  Core.lean  Correctness.lean  MathlibIntegration.lean  NTT.lean  Protocols.lean
AmoLean/Backends/CUDA/: Basic.lean
AmoLean/Backends/C_AVX512/: Basic.lean
AmoLean/EGraph/: Basic.lean  EMatch.lean  Optimize.lean  Saturate.lean  VecExpr.lean  Vector.lean  VerifiedRules.lean
AmoLean/FRI/: Basic.lean  CodeGen.lean  Fold.lean  FoldExpr.lean  Hash.lean  Kernel.lean  Merkle.lean  Proof.lean  Protocol.lean  Prover.lean  Transcript.lean  Validation.lean  Verifier.lean
AmoLean/FRI/Fields/: BN254.lean  TestField.lean
AmoLean/Field/: Goldilocks.lean
AmoLean/Matrix/: Basic.lean  Perm.lean
AmoLean/Meta/: CompileRules.lean
AmoLean/NTT/: Axioms.lean  Bounds.lean  Butterfly.lean  CooleyTukey.lean  Correctness.lean  Field.lean  Goldilocks.lean  LazyButterfly.lean  ListUtils.lean  Properties.lean  RootsOfUnity.lean  Spec.lean
AmoLean/NTT/Radix4/: Algorithm.lean  Butterfly4.lean  Equivalence.lean  Stride4.lean  Tests.lean
AmoLean/Protocols/FRI/: Query.lean
AmoLean/Protocols/Poseidon/: Basic.lean  CodeGen.lean  DomainSeparation.lean  Integration.lean  MatExpr.lean  Spec.lean
AmoLean/Protocols/Poseidon/Constants/: BN254.lean  CodeGen.lean
AmoLean/Protocols/Poseidon/Params/: BN254.lean
AmoLean/Sigma/: Basic.lean  CodeGen.lean  Expand.lean  SIMD.lean  ZModSIMD.lean
AmoLean/Vector/: Basic.lean  CodeGen.lean  CodeGenAVX2.lean
AmoLean/Verification/: FRI_Properties.lean  FuzzTest.lean  Poseidon_Semantics.lean  Semantics.lean  Theorems.lean
Bench/: NTT_Final  NTT_Final.c  NTT_Math.lean
Benchmarks/: FRI_DiffTest.lean  FRI_Flow.lean  FRI_Fusion.lean  FRI_Symbolic.lean  NativeBenchmark.lean  Phase3_Mathlib.lean  TestMacro.lean
Benchmarks/Phase0/: FriFold.lean
Benchmarks/Phase2/: Optimization.lean
Tests/: AbstractionBenchmark.lean  E2EProverVerifier.lean  ElemwiseSanity.lean  ExtendedBenchmark.lean  FullStackCheck.lean  GenericsAudit.lean  InfrastructureSanity.lean  MigrationRegression.lean  Phase3Audit.lean  Poseidon3.lean  Poseidon3Validation.lean  Poseidon4bPropertyTests.lean  PoseidonIntegrationBenchmark.lean  TranscriptSecurityAudit.lean  ZModDemo.lean
Tests/NTT/: .gitignore  AlgebraTest.lean  BitReversalTest.c  C_KernelTest.c  CorrectnessTest.lean  ListUtilsTest.lean  PropertiesTest.lean  SanitizerTest.c  cached_benchmark.c  simd_microbench.c
Tests/Optimization/: QABenchmark.lean
Tests/Oracle/: FriFoldOracle.lean
Tests/Plonky3/Bench/: FFI_Overhead.c
Tests/Plonky3/Hardening/: DeepFuzz.c  FFI_Stress.c  HARDENING_REPORT.md  LayoutTest.c  Makefile  PanicTest.c
Tests/Safety/: CodeGenChecks.lean  Main.lean
Tests/poseidon_c/: GenTestVectors.lean  Makefile  benchmark.c  benchmark_merkle.c  bn254_field.c  bn254_field.h  runner_fuzz.c  test_differential.c  test_fuzz.c  test_sbox.c  test_vector.c
Tests/poseidon_fuzz/: Cargo.toml  run_benchmark.sh
Tests/poseidon_fuzz/src/: bench.rs  main.rs
Tests/poseidon_lean/: GenerateVectors.lean  vectors_edge.json
docs/: AMO-Lean_Technical_Presentation.pptx  BENCHMARK_FASE1.md  ESTADO_PROYECTO.md  FINAL_REPORT.md  LEGACY_STATUS.md  PRESENTATION_GUIDE.md  PROJECT_STATUS.md  README.md  ZKVM_ROADMAP.md  create_presentation.py  update_presentation.py
docs/archive/: BENCHMARK_PHASE1.md  BENCHMARK_RESULTS.md  OPTION_A_ROADMAP.md  ORIGINAL_ROADMAP.md  PHASE0_LOG.md  PHASE1_PLAN.md  README.md
docs/archive/poseidon-phase/: ADR-003-codegen-simd.md  ADR-007-step5-integration.md  ADR-009-step53-generic-field-migration.md  README.md
docs/archive/poseidon-phase/migration/: PHASE3_AUDIT.md
docs/option-a/: BENCHMARKS.md  PROGRESS.md  README.md  ROADMAP.md  TESTING_ANALYSIS.md
docs/poseidon/: ADR-001-elemwise.md  ADR-002-partial-rounds.md  ADR-004-codegen-strategy.md  ADR-005-phase3-architecture.md  ADR-006-formal-verification-strategy.md  ADR-007-step5-integration.md  ADR-008-domain-separation-audit.md  PROGRESS.md  README.md
docs/poseidon/migration/: DECISIONS.md  MIGRATION_AUDIT.md  PHASE1-NOTES.md  PHASE2-COMPLETE.md  PHASE2-NOTES.md  PHASE2-PREFLIGHT.md  PLAN.md
docs/presentations/: AMO-Lean_Technical_Talk.pptx  generate_amo_lean_talk.py
docs/project/: BENCHMARKS.md  DESIGN_DECISIONS.md  PHASE3_DESIGN.md  PHASE5_BIBLIOGRAPHY.md  PHASE5_ISSUES.md  PHASE5_NTT_PLAN.md  PHASE6A_PLAN.md  PHASE6B_PLAN.md  PLONKY3_ANALYSIS.md  PROBLEMS.md  PROGRESS.md  README.md  ROADMAP.md  UNIFIED_PLAN.html  UNIFIED_PLAN.md
docs/project/Radix4/: AB_STRATEGIES.md  DESIGN_DECISIONS.md  IMPLEMENTATION_LOG.md  PROJECT_SUMMARY.md  QA_TEST_BATTERY_REQUEST.md  TOOLS_AND_INSIGHTS.md  WORKPLAN.md
docs/project/Radix4/benchmarks/: BENCHMARK_FINAL.md  (+1 more)
docs/references/: README.md
docs/references/poseidon/: notes.md
libamolean/: CMakeLists.txt  README.md
libamolean/include/amolean/: amolean.h  field_goldilocks_avx2.h  fri_fold.h
libamolean/test/: test_goldilocks.c  test_goldilocks_avx2.c
scripts/: gen_constants.lean  gen_fri_fold.lean  gen_validation.lean
verification/plonky3/: .gitignore  Makefile  README.md  benchmark.c  oracle_test.c  shim_test.c
verification/plonky3/plonky3_shim/: Cargo.toml
verification/plonky3/plonky3_shim/src/: lib.rs
(+1 files in other folders)
