[package]
name = "fuzz_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
# HorizenLabs Poseidon2 implementation (BN254)
zkhash = { git = "https://github.com/HorizenLabs/poseidon2.git", branch = "main" }

# Arkworks for field traits (used by zkhash)
ark-ff = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

[[bin]]
name = "fuzz_gen"
path = "src/main.rs"

[[bin]]
name = "bench_rust"
path = "src/bench.rs"
